force-app/main/default/objects/Inspection_Request__c/Inspection_Request__c.object-meta.xml
<CustomObject>
    <label>Inspection Request</label>
    <pluralLabel>Inspection Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <nameField>
        <label>Inspection Request Number</label>
        <type>AutoNumber</type>
        <displayFormat>IR-{00000}</displayFormat>
    </nameField>
</CustomObject>