force-app/main/default/objects/Inspection_Request__c/fields/Comparison_Session__c.field-meta.xml
<CustomField>
    <fullName>Comparison_Session__c</fullName>
    <label>Comparison Session</label>
    <type>Lookup</type>
    <referenceTo>Comparison_Session__c</referenceTo>
    <relationshipLabel>Inspection Requests</relationshipLabel>
    <relationshipName>Comparison_Session_Inspections</relationshipName>
</CustomField>