force-app/main/default/objects/Inspection_Request__c/fields/Inspector_Contact__c.field-meta.xml
<CustomField>
    <fullName>Inspector_Contact__c</fullName>
    <label>Inspector Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Inspection Requests</relationshipLabel>
    <relationshipName>Inspection_Contact_Requests</relationshipName>
</CustomField>