force-app/main/default/objects/Inspection_Request__c/fields/Preferred_Time_Window__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Time_Window__c</fullName>
    <label>Preferred Time Window</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Morning (8-11)</fullName>
                <default>true</default>
                <label>Morning (8-11)</label>
            </value>
            <value>
                <fullName>Midday (11-2)</fullName>
            </value>
            <value>
                <fullName>Afternoon (2-5)</fullName>
            </value>
            <value>
                <fullName>Evening (5-7)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>