force-app/main/default/objects/Inspection_Request__c/fields/Property__c.field-meta.xml
<CustomField>
    <fullName>Property__c</fullName>
    <label>Property</label>
    <required>true</required>
    <type>Lookup</type>
    <referenceTo>Property__c</referenceTo>
    <relationshipLabel>Inspection Requests</relationshipLabel>
    <relationshipName>Inspection_Requests</relationshipName>
</CustomField>